--- a/_posts/2016-04-25-markdown.md
+++ b/_posts/2016-04-25-markdown.md
@@ -35,4 +35,4 @@ title: markdown
 | zebra stripes | are neat      |    $1 |
 
 ***
-[baidu](www.baidu.com)
+[this blog ](http://taozi1314.github.io/)
