--- a/_posts/2016-05-10-timer.md
+++ b/_posts/2016-05-10-timer.md
@@ -5,14 +5,14 @@ title: timer
 
 # 定时器
 
-## sleep
+## 1.sleep
 
-## 手动计算
+## 2.手动计算
 线程循环 时间差
  无任务 cond.wait
 
-## alarm() 或者 settimer()
+## 3.alarm() 或者 settimer()
 
-## select() 超时
+## 4.select() 超时
 
 
